// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gux-pagination-items-per-page #render should render as expected (1) 1`] = `
<gux-pagination-items-per-page items-per-page="25">
  <gux-option tabindex="0" value="25">
    <!---->
    <div title="25">
      <span style="display: none;">
        25
      </span>
      <gux-text-highlight highlight="" text="25"></gux-text-highlight>
    </div>
  </gux-option>
  <gux-option tabindex="0" value="50">
    <!---->
    <div title="50">
      <span style="display: none;">
        50
      </span>
      <gux-text-highlight highlight="" text="50"></gux-text-highlight>
    </div>
  </gux-option>
  <gux-option tabindex="0" value="75">
    <!---->
    <div title="75">
      <span style="display: none;">
        75
      </span>
      <gux-text-highlight highlight="" text="75"></gux-text-highlight>
    </div>
  </gux-option>
  <gux-option tabindex="0" value="100">
    <!---->
    <div title="100">
      <span style="display: none;">
        100
      </span>
      <gux-text-highlight highlight="" text="100"></gux-text-highlight>
    </div>
  </gux-option>
  <div class="gux-pagination-items-per-page-container">
    <div class="gux-pagination-items-per-page-picker">
      <gux-dropdown>
        <!---->
        <div class="gux-default gux-dropdown">
          <div class="gux-select-field">
            <span aria-hidden="true" class="gux-ghost"></span>
            <gux-text-field-legacy class="gux-unclearable" title="25" value="25"></gux-text-field-legacy>
            <button aria-hidden="true" class="gux-dropdown-indicator" tabindex="-1" type="button">
              <gux-icon decorative="" iconname="ic-dropdown-arrow"></gux-icon>
            </button>
          </div>
          <div class="gux-options">
            <gux-option tabindex="0">
              <!---->
              <div title="25">
                <span style="display: none;">
                  25
                </span>
                <gux-text-highlight highlight="" text="25"></gux-text-highlight>
              </div>
            </gux-option>
            <gux-option tabindex="0">
              <!---->
              <div title="50">
                <span style="display: none;">
                  50
                </span>
                <gux-text-highlight highlight="" text="50"></gux-text-highlight>
              </div>
            </gux-option>
            <gux-option tabindex="0">
              <!---->
              <div title="75">
                <span style="display: none;">
                  75
                </span>
                <gux-text-highlight highlight="" text="75"></gux-text-highlight>
              </div>
            </gux-option>
            <gux-option tabindex="0">
              <!---->
              <div title="100">
                <span style="display: none;">
                  100
                </span>
                <gux-text-highlight highlight="" text="100"></gux-text-highlight>
              </div>
            </gux-option>
          </div>
        </div>
      </gux-dropdown>
    </div>
    <div>
      per page
    </div>
  </div>
</gux-pagination-items-per-page>
`;

exports[`gux-pagination-items-per-page #render should render as expected (2) 1`] = `
<gux-pagination-items-per-page items-per-page="50">
  <gux-option tabindex="0" value="25">
    <!---->
    <div title="25">
      <span style="display: none;">
        25
      </span>
      <gux-text-highlight highlight="" text="25"></gux-text-highlight>
    </div>
  </gux-option>
  <gux-option tabindex="0" value="50">
    <!---->
    <div title="50">
      <span style="display: none;">
        50
      </span>
      <gux-text-highlight highlight="" text="50"></gux-text-highlight>
    </div>
  </gux-option>
  <gux-option tabindex="0" value="75">
    <!---->
    <div title="75">
      <span style="display: none;">
        75
      </span>
      <gux-text-highlight highlight="" text="75"></gux-text-highlight>
    </div>
  </gux-option>
  <gux-option tabindex="0" value="100">
    <!---->
    <div title="100">
      <span style="display: none;">
        100
      </span>
      <gux-text-highlight highlight="" text="100"></gux-text-highlight>
    </div>
  </gux-option>
  <div class="gux-pagination-items-per-page-container">
    <div class="gux-pagination-items-per-page-picker">
      <gux-dropdown>
        <!---->
        <div class="gux-default gux-dropdown">
          <div class="gux-select-field">
            <span aria-hidden="true" class="gux-ghost"></span>
            <gux-text-field-legacy class="gux-unclearable" title="50" value="50"></gux-text-field-legacy>
            <button aria-hidden="true" class="gux-dropdown-indicator" tabindex="-1" type="button">
              <gux-icon decorative="" iconname="ic-dropdown-arrow"></gux-icon>
            </button>
          </div>
          <div class="gux-options">
            <gux-option tabindex="0">
              <!---->
              <div title="25">
                <span style="display: none;">
                  25
                </span>
                <gux-text-highlight highlight="" text="25"></gux-text-highlight>
              </div>
            </gux-option>
            <gux-option tabindex="0">
              <!---->
              <div title="50">
                <span style="display: none;">
                  50
                </span>
                <gux-text-highlight highlight="" text="50"></gux-text-highlight>
              </div>
            </gux-option>
            <gux-option tabindex="0">
              <!---->
              <div title="75">
                <span style="display: none;">
                  75
                </span>
                <gux-text-highlight highlight="" text="75"></gux-text-highlight>
              </div>
            </gux-option>
            <gux-option tabindex="0">
              <!---->
              <div title="100">
                <span style="display: none;">
                  100
                </span>
                <gux-text-highlight highlight="" text="100"></gux-text-highlight>
              </div>
            </gux-option>
          </div>
        </div>
      </gux-dropdown>
    </div>
    <div>
      per page
    </div>
  </div>
</gux-pagination-items-per-page>
`;

exports[`gux-pagination-items-per-page #render should render as expected (3) 1`] = `
<gux-pagination-items-per-page items-per-page="75">
  <gux-option tabindex="0" value="25">
    <!---->
    <div title="25">
      <span style="display: none;">
        25
      </span>
      <gux-text-highlight highlight="" text="25"></gux-text-highlight>
    </div>
  </gux-option>
  <gux-option tabindex="0" value="50">
    <!---->
    <div title="50">
      <span style="display: none;">
        50
      </span>
      <gux-text-highlight highlight="" text="50"></gux-text-highlight>
    </div>
  </gux-option>
  <gux-option tabindex="0" value="75">
    <!---->
    <div title="75">
      <span style="display: none;">
        75
      </span>
      <gux-text-highlight highlight="" text="75"></gux-text-highlight>
    </div>
  </gux-option>
  <gux-option tabindex="0" value="100">
    <!---->
    <div title="100">
      <span style="display: none;">
        100
      </span>
      <gux-text-highlight highlight="" text="100"></gux-text-highlight>
    </div>
  </gux-option>
  <div class="gux-pagination-items-per-page-container">
    <div class="gux-pagination-items-per-page-picker">
      <gux-dropdown>
        <!---->
        <div class="gux-default gux-dropdown">
          <div class="gux-select-field">
            <span aria-hidden="true" class="gux-ghost"></span>
            <gux-text-field-legacy class="gux-unclearable" title="75" value="75"></gux-text-field-legacy>
            <button aria-hidden="true" class="gux-dropdown-indicator" tabindex="-1" type="button">
              <gux-icon decorative="" iconname="ic-dropdown-arrow"></gux-icon>
            </button>
          </div>
          <div class="gux-options">
            <gux-option tabindex="0">
              <!---->
              <div title="25">
                <span style="display: none;">
                  25
                </span>
                <gux-text-highlight highlight="" text="25"></gux-text-highlight>
              </div>
            </gux-option>
            <gux-option tabindex="0">
              <!---->
              <div title="50">
                <span style="display: none;">
                  50
                </span>
                <gux-text-highlight highlight="" text="50"></gux-text-highlight>
              </div>
            </gux-option>
            <gux-option tabindex="0">
              <!---->
              <div title="75">
                <span style="display: none;">
                  75
                </span>
                <gux-text-highlight highlight="" text="75"></gux-text-highlight>
              </div>
            </gux-option>
            <gux-option tabindex="0">
              <!---->
              <div title="100">
                <span style="display: none;">
                  100
                </span>
                <gux-text-highlight highlight="" text="100"></gux-text-highlight>
              </div>
            </gux-option>
          </div>
        </div>
      </gux-dropdown>
    </div>
    <div>
      per page
    </div>
  </div>
</gux-pagination-items-per-page>
`;

exports[`gux-pagination-items-per-page #render should render as expected (4) 1`] = `
<gux-pagination-items-per-page items-per-page="100">
  <gux-option tabindex="0" value="25">
    <!---->
    <div title="25">
      <span style="display: none;">
        25
      </span>
      <gux-text-highlight highlight="" text="25"></gux-text-highlight>
    </div>
  </gux-option>
  <gux-option tabindex="0" value="50">
    <!---->
    <div title="50">
      <span style="display: none;">
        50
      </span>
      <gux-text-highlight highlight="" text="50"></gux-text-highlight>
    </div>
  </gux-option>
  <gux-option tabindex="0" value="75">
    <!---->
    <div title="75">
      <span style="display: none;">
        75
      </span>
      <gux-text-highlight highlight="" text="75"></gux-text-highlight>
    </div>
  </gux-option>
  <gux-option tabindex="0" value="100">
    <!---->
    <div title="100">
      <span style="display: none;">
        100
      </span>
      <gux-text-highlight highlight="" text="100"></gux-text-highlight>
    </div>
  </gux-option>
  <div class="gux-pagination-items-per-page-container">
    <div class="gux-pagination-items-per-page-picker">
      <gux-dropdown>
        <!---->
        <div class="gux-default gux-dropdown">
          <div class="gux-select-field">
            <span aria-hidden="true" class="gux-ghost"></span>
            <gux-text-field-legacy class="gux-unclearable" title="100" value="100"></gux-text-field-legacy>
            <button aria-hidden="true" class="gux-dropdown-indicator" tabindex="-1" type="button">
              <gux-icon decorative="" iconname="ic-dropdown-arrow"></gux-icon>
            </button>
          </div>
          <div class="gux-options">
            <gux-option tabindex="0">
              <!---->
              <div title="25">
                <span style="display: none;">
                  25
                </span>
                <gux-text-highlight highlight="" text="25"></gux-text-highlight>
              </div>
            </gux-option>
            <gux-option tabindex="0">
              <!---->
              <div title="50">
                <span style="display: none;">
                  50
                </span>
                <gux-text-highlight highlight="" text="50"></gux-text-highlight>
              </div>
            </gux-option>
            <gux-option tabindex="0">
              <!---->
              <div title="75">
                <span style="display: none;">
                  75
                </span>
                <gux-text-highlight highlight="" text="75"></gux-text-highlight>
              </div>
            </gux-option>
            <gux-option tabindex="0">
              <!---->
              <div title="100">
                <span style="display: none;">
                  100
                </span>
                <gux-text-highlight highlight="" text="100"></gux-text-highlight>
              </div>
            </gux-option>
          </div>
        </div>
      </gux-dropdown>
    </div>
    <div>
      per page
    </div>
  </div>
</gux-pagination-items-per-page>
`;
